# scenario-comparison-web

./: README.md  app.py  collect_data.py  collect_model_data.py  collect_partial_model_data.py  day_model_processor.py  integrate_partial_models.py  pyproject.toml  render.yaml  requirements.txt  setup.py
Templates/: index.html
data/: DDR_Predictor.xlsx  Week Wed ODR.csv  day_model_probabilities.txt  model_weekly_data.csv  model_weekly_data_with_partial.csv  partial_model_data.csv  processed_weekly_data.csv
templates/: index.html
