[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scenario-comparison-web"
version = "1.0.0"
description = "Trading data analysis web application"
requires-python = ">=3.12,<3.13"
dependencies = [
    "Flask==2.3.3",
    "pandas==2.1.4",
    "openpyxl==3.1.2",
    "gunicorn==21.2.0",
    "Werkzeug==2.3.7",
    "numpy==1.26.2",
]

[tool.setuptools]
packages = ["app"] 