[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scenario-comparison-web"
version = "1.0.0"
description = "Trading data analysis web application"
requires-python = ">=3.13"
dependencies = [
    "Flask==3.0.0",
    "pandas==2.0.3",
    "openpyxl==3.1.2",
    "gunicorn==21.2.0",
    "Werkzeug==3.0.1",
    "numpy==1.24.3",
]

[tool.setuptools]
packages = ["app"] 